test/jit/math/neg/neg-static-integer-array.mo
function negStaticIntegerArray
    input Integer[3] x;
    output Integer[3] y;

    algorithm
        y := -x;
end negStaticIntegerArray;
